vlib/v/checker/tests/immutable_array_field_shift.out
vlib/v/checker/tests/immutable_array_field_shift.v:14:4: error: field `a` of struct `Bbb` is immutable
   12 |         a: Aaa{}
   13 |     }
   14 |     b.a.i << 3
      |       ^
   15 | }
