vlib/v/checker/tests/immutable_array_field_shift.vv
struct Aaa {
mut:
	i []int
}

struct Bbb {
	a Aaa
}

fn main() {
	mut b := Bbb{
		a: Aaa{}
	}
	b.a.i << 3
}
